k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-films-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catalogue-films
  template:
    metadata:
      labels:
        app: catalogue-films
    spec:
      containers:
        - name: catalogue
          image: timpava/react-catalogue-films:latest
          ports:
            - containerPort: 80
