k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-films-service
spec:
  selector:
    app: catalogue-films
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
